--- a/spec/fixtures/input_form.html
+++ b/spec/fixtures/input_form.html
@@ -1,4 +1,4 @@
 <form action="#" method="post">
 <label for="job">Job</label>
-<input name="job" value="code">
+<input name="job" type="text" value="code">
 </form>
